pushing IO with basic files

--- a/Tuples, Sets & Booleans.ipynb
+++ b/Tuples, Sets & Booleans.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f016c05d",
+   "id": "3b99506d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "57294fff",
+   "id": "7e963bd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2d4b3bc",
+   "id": "d20b90fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19d9cfc9",
+   "id": "87f2c84e",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ae535eba",
+   "id": "256c7df3",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "954d4d20",
+   "id": "8157a81b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "91813df3",
+   "id": "5619f988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e9110b55",
+   "id": "e28afaf6",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4fe6b61b",
+   "id": "3b651399",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "16e66fdd",
+   "id": "5eb327b8",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab3c9c00",
+   "id": "138d7ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "732a37c1",
+   "id": "ef1ed37d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "09af1896",
+   "id": "11f2475c",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fc043d03",
+   "id": "c1664c22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7c714e1a",
+   "id": "04d8273c",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffff9930",
+   "id": "d35fd350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "24b3e897",
+   "id": "687a3019",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "30953de4",
+   "id": "c3131201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9f6838d5",
+   "id": "50add4a0",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6a6a365e",
+   "id": "6984ce55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a5e5ba25",
+   "id": "0b367360",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4407cc4e",
+   "id": "e8ffda97",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "26a7df77",
+   "id": "045f9a1b",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0aa37525",
+   "id": "60a952ab",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b0aac7ab",
+   "id": "e6043b29",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "10505189",
+   "id": "1a467dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,8 +427,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "03b510c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "50a36011",
+   "id": "1862aa4e",
    "metadata": {},
    "outputs": [],
    "source": []
