pushing Python Comparison operators

--- a/Lists, & dictionaries.ipynb
+++ b/Lists, & dictionaries.ipynb
@@ -542,28 +542,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "c9a2f512",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_list= [\"a\",'x','c','z','b']\n",
-    "num_list=[]"
+    "num_list=[\"9\",\"4\",\"5\",\"8\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "58bfecb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list="
+    "num_list.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "16e7b986",
    "metadata": {},
    "outputs": [],
@@ -572,20 +572,25 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "92f16c5d",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5046b6d",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['4', '5', '8', '9']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted_list"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14aca000",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
