pushing If, else ,elif and loop and Useful Operators in python

--- a/If, else ,elif and loop.ipynb
+++ b/If, else ,elif and loop.ipynb
@@ -445,14 +445,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "03e11748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={'k1':1,'k2':2,'k3':3}\n",
+    "for value in d.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "314095c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d={'k1':1,'k2':2,'k3':3}\n",
-    "for item in d,keys"
+    "#while loops in python"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "36422b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#while boolean condition:\n",
+    "    #do something\n",
+    "#else:\n",
+    "    #do somethng else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e5af457a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the current value of x0\n",
+      "the current value of x1\n",
+      "the current value of x2\n",
+      "the current value of x3\n",
+      "the current value of x4\n",
+      "x is not less than 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "while x<5:\n",
+    "    print(f'the current value of x{x}')\n",
+    "    #x= x+1\n",
+    "    x+=1\n",
+    "else:\n",
+    "    print('x is not less than 5')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "09546c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is currently: 0\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 1\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 2\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 3\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 4\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 5\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 6\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 7\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 8\n",
+      "x is still less than 10,adding 1 to x\n",
+      "x is currently: 9\n",
+      "x is still less than 10,adding 1 to x\n",
+      "All Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "while x<10:\n",
+    "    print('x is currently:',x)\n",
+    "    print('x is still less than 10,adding 1 to x')\n",
+    "    x+=1\n",
+    "else:\n",
+    "    print('All Done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "07e65aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#break ,continue ,pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "739881d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#break:breaks out of closet enclosing loop\n",
+    "#continue:goes to the top of the clost enclosing loop\n",
+    "#pass:does nothing at all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "81931c50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The end of my script\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[1,2,3,]\n",
+    "for item in x:\n",
+    "    #gdgsd\n",
+    "    pass\n",
+    "print('The end of my script')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e31d431a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "h\n",
+      "r\n",
+      "i\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring='Shriya'\n",
+    "for letter in mystring:\n",
+    "    if letter =='a':\n",
+    "        continue\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1bdd774a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "u\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = 'August'\n",
+    "for letter in mystring:\n",
+    "    if letter =='g':\n",
+    "        break\n",
+    "    print(letter)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "320c2274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 0\n",
+    "while x<5:\n",
+    "    if x==2:\n",
+    "        break\n",
+    "    print(x)\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a078ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b6972e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
