--- a/Useful Operators in python.ipynb
+++ b/Useful Operators in python.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b5c9ac5",
+   "id": "4808ab00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ea0e307",
+   "id": "229f8bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a1a572ae",
+   "id": "4f6cea90",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "045367a8",
+   "id": "5dbc2d56",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fa2edba7",
+   "id": "09268a8d",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2cd340f",
+   "id": "d2e471f9",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1edb1817",
+   "id": "de041275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a4f7da51",
+   "id": "1cf4794b",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7983710d",
+   "id": "30419f4e",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c2779ac6",
+   "id": "4de448cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4490d133",
+   "id": "c162a4fa",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1cbfc42e",
+   "id": "d31eafd4",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7ddcf170",
+   "id": "651b6f78",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0c78c102",
+   "id": "933975a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b40ffe14",
+   "id": "69c5007d",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "93f8ed9e",
+   "id": "1153d659",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "07f47861",
+   "id": "2bc24ce2",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2e5d0387",
+   "id": "88cd5040",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e794ef83",
+   "id": "e217b2a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8f7e3f65",
+   "id": "4adcc5d3",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "83246ee6",
+   "id": "f300514f",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8d2c5479",
+   "id": "232a0b15",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ec49349f",
+   "id": "9e4048a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4825a999",
+   "id": "b249d1f2",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9e0bd643",
+   "id": "7d36f878",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "81243e6e",
+   "id": "4915be24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "38e129a1",
+   "id": "262efa4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a5f36c97",
+   "id": "1bced488",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "47e95595",
+   "id": "4f08ff4e",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "b66c849e",
+   "id": "2f834a0c",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "576d37b3",
+   "id": "b5221789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ef79008d",
+   "id": "b27a6e5c",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "973baf5e",
+   "id": "e3a96f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1da99d1b",
+   "id": "878a7a57",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6f5c1cb3",
+   "id": "751b2c26",
    "metadata": {},
    "outputs": [
     {
@@ -693,15 +693,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "795bb8e5",
+   "execution_count": 75,
+   "id": "bbc268b0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your favourite no10\n"
+      "Enter your favourite no26\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "69213584",
+   "id": "b38c9e91",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fd596b0f",
+   "id": "bf0f1442",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ba8795c3",
+   "id": "c7b08164",
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +776,413 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "12ea5ec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "cd08bb07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length35\n",
+      "Enter the width23\n",
+      "Area of rectangle = 805.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "length=float(input('Enter the length'))\n",
+    "width=float(input('Enter the width'))\n",
+    "area=length*width\n",
+    "print('Area of rectangle =',area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "225d7bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "b7a81fc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#list comphrehension in python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "060296b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mystring='hello'\n",
+    "mylist=[]\n",
+    "for letter in mystring:\n",
+    "    mylist.append(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "2665c501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h', 'e', 'l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "c1a5062e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mystring='hello'\n",
+    "mylist=[ letter for letter in mystring]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "f660a3c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h', 'e', 'l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "80d6d7d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word='hello'\n",
+    "mylist=[x for x in word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "45da1b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h', 'e', 'l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "92d08e55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylists=[x for x in 'april and may']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "577e3677",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'p', 'r', 'i', 'l', ' ', 'a', 'n', 'd', ' ', 'm', 'a', 'y']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f8647b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mynum=[num **2 for num in range(0,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "14df905d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mynum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "465a6b62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myeven=[x**2 for x in range(0,11) if x%2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "a78c04bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 16, 36, 64, 100]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myeven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "081d22a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "celcius= [0,10,20,30,50,34.5]\n",
+    "fahrenheit= [((9/5)*temp+32) for temp in celcius]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "3f4121eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32.0, 50.0, 68.0, 86.0, 122.0, 94.1]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fahrenheit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "158146fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " results= [x if x%2 ==0 else 'OOD' for x in range(0,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "3522bcd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 'OOD', 2, 'OOD', 4, 'OOD', 6, 'OOD', 8, 'OOD']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "1fae5f68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NESTED LOOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "5a6624a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist=[]\n",
+    "for x in [1,4,6]:\n",
+    "    for y in [1,10,100]:\n",
+    "        mylist.append(x*y)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "6574943b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 10, 100, 4, 40, 400, 6, 60, 600]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "04baba51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mynest = [x*y for x in [2,4,6] for y in [1,10,1000]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "92a50bb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 20, 2000, 4, 40, 4000, 6, 60, 6000]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mynest"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "62282991",
+   "id": "46901d94",
    "metadata": {},
    "outputs": [],
    "source": []
