--- a/Methods in python.ipynb
+++ b/Methods in python.ipynb
@@ -118,21 +118,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a1d648d6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello my name is Lalita\n"
+     "ename": "NameError",
+     "evalue": "name 'arg_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m name\u001b[38;5;241m=\u001b[39m \u001b[43marg_name\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLalita\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arg_name' is not defined"
      ]
     }
    ],
    "source": [
-    "arg_name('Lalita')"
+    "name= arg_name('Lalita')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ddc3a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mname\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -337,7 +361,10 @@
    "id": "0c09e4e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_even_list(num_list):\n",
+    "    even_numbers"
+   ]
   }
  ],
  "metadata": {
