pushing all Lalita python files

--- a/Function  Practice Exercises.ipynb
+++ b/Function  Practice Exercises.ipynb
@@ -31,32 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "0de3b1e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def myfunc():\n",
-    "    print('My name is {Hello Name}'.format(name))"
+    "    print('My name is {}'.format(name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e1a07be0",
+   "execution_count": 12,
+   "id": "3933655f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def myfunc(a):\n",
-    "    if a == True:\n",
-    "        return 'Hello'\n",
-    "    elif a == False:\n",
-    "        return 'Goodbye'"
+    "    if a==True:\n",
+    "        return'Hello'\n",
+    "    elif a==False:\n",
+    "        return'Goodbye'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "1af8f5fb",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "'Hello'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
