--- a/Milestone Exercise Warmup.ipynb
+++ b/Milestone Exercise Warmup.ipynb
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6f2bc38d",
+   "id": "5fa5fffb",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "edde2f0c",
+   "id": "11216c7f",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5487056a",
+   "id": "4999f76f",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "id": "8bf3c1cf",
    "metadata": {},
    "outputs": [
@@ -727,16 +727,16 @@
       "Sorry you are out of acceptable range 0-10\n",
       "Please enter a number 0-10: new\n",
       "Sorry that is not a digit\n",
-      "Please enter a number 0-10: 4\n"
+      "Please enter a number 0-10: 5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "id": "f46921b2",
    "metadata": {},
    "outputs": [],
@@ -760,8 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "66dbf1ba",
+   "execution_count": 78,
+   "id": "0230c1bf",
    "metadata": {},
    "outputs": [
     {
@@ -779,8 +779,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "5365057c",
+   "execution_count": 79,
+   "id": "515c53df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,32 +795,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "7367aece",
+   "execution_count": 80,
+   "id": "5884e8e8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pick a number 0,1,2: 11\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: 20\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: two\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: 5\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: 1\n"
+      "Pick a number 0,1,2: 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,8 +823,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "aa0dc2c0",
+   "execution_count": 81,
+   "id": "b9b8da02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,24 +836,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "94208dda",
+   "execution_count": 82,
+   "id": "bf73f2a1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a string to place at position new\n"
+      "Enter a string to place at position NEW\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 'new', 2]"
+       "[0, 'NEW', 2]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,8 +864,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "3782e653",
+   "execution_count": 83,
+   "id": "df927378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,8 +883,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "984c88c1",
+   "execution_count": 84,
+   "id": "718e1b00",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +900,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,8 +911,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "280c2d67",
+   "execution_count": 85,
+   "id": "d7ce9b26",
    "metadata": {},
    "outputs": [
     {
@@ -929,25 +921,17 @@
      "text": [
       "Here is the current list\n",
       "[0, 1, 2]\n",
-      "Pick a number 0,1,2: 10\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: NEW\n",
-      "Sorry invalid choice\n",
-      "Pick a number 0,1,2: 0\n",
+      "Pick a number 0,1,2: 2\n",
       "Enter a string to place at position MSU\n",
       "Here is the current list\n",
-      "['MSU', 1, 2]\n",
-      "Keep Playing?:(Y or N) No\n",
-      "Sorry I do not understand ! Please choose Y or N\n",
-      "Keep Playing?:(Y or N) Yes\n",
-      "Sorry I do not understand ! Please choose Y or N\n",
+      "[0, 1, 'MSU']\n",
       "Keep Playing?:(Y or N) Y\n",
       "Here is the current list\n",
-      "['MSU', 1, 2]\n",
-      "Pick a number 0,1,2: 2\n",
-      "Enter a string to place at position Brand\n",
+      "[0, 1, 'MSU']\n",
+      "Pick a number 0,1,2: 1\n",
+      "Enter a string to place at position BRAND\n",
       "Here is the current list\n",
-      "['MSU', 1, 'Brand']\n",
+      "[0, 'BRAND', 'MSU']\n",
       "Keep Playing?:(Y or N) N\n"
      ]
     }
@@ -966,18 +950,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000d5826",
+   "id": "6cc6c2fc",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ae20274",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "i = 4\n",
+    "d = 4.0\n",
+    "s = 'HackerRank '\n",
+    "# Declare second integer, double, and String variables.\n",
+    "a=12\n",
+    "b= 4.0\n",
+    "c='is the best place to learn and practice coding!, we get HackerRank is the best place to learn and practice coding!.'\n",
+    "# Read and save an integer, double, and String to your variables.\n",
+    "\n",
+    "# Print the sum of both integer variables on a new line.\n",
+    "\n",
+    "# Print the sum of the double variables on a new line.\n",
+    "\n",
+    "# Concatenate and print the String variables on a new line\n",
+    "# The 's' variable above should be printed first."
+   ]
   }
  ],
  "metadata": {
