--- a/ASSESMENT THURSDAY.ipynb
+++ b/ASSESMENT THURSDAY.ipynb
@@ -216,11 +216,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1921c10c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the Number345\n",
+      "678 is not an Armstrong number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_armstrong_number(num):\n",
+    "    num_str = str(num)\n",
+    "    \n",
+    "    num =input(\"Enter the Number\")\n",
+    "if is_armstrong_number(num):\n",
+    "    print(f\"{num} is an Armstrong number.\")\n",
+    "else:\n",
+    "    print(f\"{num} is not an Armstrong number.\")"
+   ]
   },
   {
    "cell_type": "code",
